# langchain-projects

./: .gitignore  Makefile  pyproject.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-start.sh
src/: settings.py
src/agent/: main.py  report.html  sql.py
src/chaining/: main.py
src/facts/: filter_retriever.py  main.py  prompt.py
src/facts/chroma_db/: chroma.sqlite3
src/pdf/app/: settings.py
src/pdf/app/celery/: __init__.py
src/pdf/app/chat/: chat.py  create_embeddings.py  redis.py  score.py
src/pdf/app/chat/embeddings/: open_ai.py  openai.py
src/pdf/app/chat/llms/: chatopenai.py
src/pdf/app/chat/memories/: memory_registry.py  sql_memory.py  window_memory.py
src/pdf/app/chat/vector_stores/: pinecone.py
src/pdf/app/web/: api.py  files.py
src/pdf/app/web/config/: __init__.py
src/pdf/app/web/views/: conversation_views.py
src/pdf/instance/: sqlite.db
src/tchat/: main.py
