[project]
name = "langchain-app"
version = "0.1.0"
description = "AI-powered business partner discovery backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "pydantic-settings>=2.12.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=1.0.0",
    "langchain>=1.1.0",
]
