[project]
name = "langchain-app"
version = "0.1.0"
description = "AI-powered business partner discovery backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "pydantic-settings>=2.12.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=1.0.0",
    "langchain>=1.1.0",
    "langchain-pinecone>=0.2.0",
    "boto3==1.26.122",
    "botocore==1.29.122",
    "celery==5.3.1",
    "click==8.1.3",
    "flask==2.3.1",
    "flask-sqlalchemy==3.0.3",
    "flask-cors==4.0.0",
    "werkzeug==2.3.1",
    "invoke==2.2.0",
    "pinecone-client==3.2.2",
    "pypdf==3.15.4",
    "watchdog==3.0.0",
    "tiktoken",
    "uuid==1.30",
    "langfuse>=2.0.0",
    "backoff==2.2.1",
    "redis==5.0.0",
    "colorama",
]
